Added the login log. Added a better paginator for view topic. The last post on the topic list and forum pages now link to the last page of a topic for quicker navigation. The Account Manager now utilises dyntmpl in more areas. More tooltips. Tweaked the colour for the validated emails in the Email Manager so it looks nicer on dark themes. Moved some inline styles from the Email Manager into the stylesheets and removed obsolete ones. Added the mixed BenchmarkTopicGuestAdminRouteParallelWithRouter benchmark. The bad route benchmark should no longer abort when erroring, something which doesn't make sense as it's always expected to error. Reduce a bit more boilerplate with renderTemplate() Added the *CTemplateSet.addText method and used it to optimise the generated templates a tiny bit more. The forums route now has guest and member variants generated for it. Turned the experimental template optimisation back on for more data.
Added the routes.AccountLogins route.

Added the account_logins phrase.
Added the account_menu_logins phrase.
Added the account_logins_head phrase.
Added the account_logins_success phrase.
Added the account_logins_failure phrase.

You need to run the patcher / updater for this commit.

--- a/langs/english.json
+++ b/langs/english.json
@@ -132,6 +132,7 @@
 		"account_mfa":"Manage 2FA",
 		"account_mfa_setup":"Setup 2FA",
 		"account_email":"Email Manager",
+		"account_logins":"Logins",
 		"account_level_list":"Level Progress",
 
 		"panel_dashboard":"Control Panel Dashboard",
@@ -447,6 +448,7 @@
 		"account_menu_email":"Email",
 		"account_menu_security":"Security",
 		"account_menu_notifications":"Notifications",
+		"account_menu_logins":"Logins",
 
 		"account_coming_soon":"Coming Soon",
 
@@ -479,6 +481,10 @@
 		"account_mfa_setup_explanation":"Type this secret into your Google Authenticator and type the code it gives you below. You will have to input codes provided by it for all future logins.",
 		"account_mfa_setup_verify":"Verify",
 		"account_mfa_setup_button":"Setup",
+
+		"account_logins_head":"Logins",
+		"account_logins_success":"Successful Login",
+		"account_logins_failure":"Failed Login",
 
 		"areyousure_head":"Are you sure?",
 		"areyousure_continue":"Continue",
