Laid the foundations for better reply attachments. The attachment manager introduced in the previous patch is now properly localised.
Repurposed AttachmentStore.CountInTopic as a more general CountIn method.
Added an &amp; entity in attachment URLs so that the characters don't get mutated into something weird.
Tried to make the linebreaks a little glitchy in the inline editor, we have a better solution in a mind soon!
Fixed a bug where replies used .ContentHTML instead of .Content which led to a lot of HTML getting in the way of reply edits.
Fixed a bug where reply attachments used the topicID rather than the replyID for their originID entries.
Fixed a bug where the topic attachment counts weren't getting incremented.

Added the topic.select_button_test, topic.copy_button_test and topic.upload_button_test phrases.

Added the attachCount column to the replies table. This commit requires you to run the patcher / updater.

--- a/langs/english.json
+++ b/langs/english.json
@@ -376,6 +376,10 @@
 		"topic.report_button_text":"Report",
 		"topic.flag_button_text":"Flag",
 
+		"topic.select_button_text":"Select",
+		"topic.copy_button_text":"Copy",
+		"topic.upload_button_text":"Upload",
+
 		"panel_rank_admins":"Admins",
 		"panel_rank_mods":"Mods",
 		"panel_rank_banned":"Banned",
