Added the Online Users Context widget.
Commented out a couple lines of debug code.
Fixed a data race where the Online Users widget would sometimes show more users than it should.
Added a new phrase.

--- a/langs/english.json
+++ b/langs/english.json
@@ -669,6 +669,7 @@
 		"widget.online_name":"Online Users",
 		"widget.online_none_online":"No one is online.",
 		"widget.online_some_online":"There are %d users online.",
+		"widget.online_view_topic_name":"In Topic",
 
 		"option_yes":"Yes",
 		"option_no":"No",
