The forum page now uses EasyJSON to speed it up slightly.
Added SemrushBot to the analytics rather than treating it as an unknown.
The word compatible is now skipped in UA to hopefully avoid allocating a little bit more.
The tickloop is a little more resilient against hard stale connections now.
Removed a temporary benchmark which was used for comparing the built-in JSON library to EasyJSON.

Added the semrush phrase.

--- a/langs/english.json
+++ b/langs/english.json
@@ -190,6 +190,7 @@
 		"discourse":"Discourse Forum Onebox",
 		"lynx":"Lynx",
 		
+		"semrush":"SemrushBot",
 		"zgrab":"Zgrab Application Scanner",
 		"suspicious":"Suspicious",
 		"unknown":"Unknown",
