Added the topics_search phrase.

--- a/langs/english.json
+++ b/langs/english.json
@@ -121,6 +121,7 @@
 		"overview":"Overview",
 		"page":"Page",
 		"topics":"All Topics",
+		"topics_search":"Search Results",
 		"forums":"Forum List",
 		"create_topic":"Create Topic",
 		"login":"Login",
