Deployed multi-series charts across the entirety of the analytics panel. Added the one year time range to the analytics panes. Dates are now shown on detail panes for Request, Topic and Post analytics instead of times for higher time ranges. The labels should now show up properly for the three month time range charts. The paginator should now work properly for login logs. Pushed a potential fix for subsequent pages with only one item not showing. up. Executing a search query should now change the title. Fixed a bug where the user agent parser choked on : characters. Fixed the ordering of items in the multi-series charts which caused the most important items to get booted out rather then the least important ones. Tweaked the padding on the User Manager items for Nox so they won't break onto multiple lines so readily. Fixed a potential issue with topic list titles. Fixed a potential crash bug in the Forum Analytics for deleted forums.
Added the Count method to LoginLogStore.
Continued work on the ElasticSearch mapping setup utility.

Added the topic_list.search_head phrase.
Added the panel_statistics_time_range_one_year phrase.

--- a/langs/english.json
+++ b/langs/english.json
@@ -518,6 +518,7 @@
 		"quick_topic.add_file_button":"Add File",
 		"quick_topic.cancel_button":"Cancel",
 
+		"topic_list.search_head":"Search Results",
 		"topic_list.create_topic_tooltip":"Create Topic",
 		"topic_list.create_topic_aria":"Create a topic",
 		"topic_list.moderate":"Moderate",
@@ -831,6 +832,7 @@
 		"panel_statistics_topic_counts_head":"Topic Counts",
 		"panel_statistics_requests_head":"Requests",
 
+		"panel_statistics_time_range_one_year":"1 year",
 		"panel_statistics_time_range_three_months":"3 months",
 		"panel_statistics_time_range_one_month":"1 month",
 		"panel_statistics_time_range_one_week":"1 week",
