Localised the analytics panes. Tweaked the analytics phrases to make them a little more compact so they don't overlap as badly. Added support for Facebook to the analytics panel. Fixed a bug where language ISO codes weren't tracked properly. Fixed a bug with settings overflowing their containers on Cosora. The panel elements can now take up more room on Nox. Added some information on per-theme overrides to docs/templates.md
Added the analytics.now phrase.
Added the analytics.today phrase.
Added the analytics.days phrase.
Added the analytics.days_short phrase.
Added the analytics.months phrase.
Added the analytics.months_short phrase.

--- a/langs/english.json
+++ b/langs/english.json
@@ -386,6 +386,13 @@
 		"topic.copy_button_text":"Copy",
 		"topic.upload_button_text":"Upload",
 
+		"analytics.now": "now",
+		"analytics.today": "today",
+		"analytics.days": " days",
+		"analytics.days_short": "d",
+		"analytics.months": " months",
+		"analytics.months_short": "m",
+
 		"panel_rank_admins":"Admins",
 		"panel_rank_mods":"Mods",
 		"panel_rank_banned":"Banned",
