The number of unread alerts now appears in the page title. Added the Back to Site link to Nox's Control Panel. Added the panel_group_menu template and used it to de-dupe the group menu HTML. Fixed a potential race condition with dismiss alert. Fixed a strange bug where new alerts wouldn't appear. Fixed a race condition where client templates sometimes wouldn't load. Dramatically cut down on the number of DOM rebuilds for the alert list. Added some missing error handling for ajax page block loads. Fixed a bug where the dimiss alert endpoint wasn't sending a success payload.
Made the register_might_be_machine phrase more descriptive.
Added the panel_menu_aria phrase.

--- a/langs/english.json
+++ b/langs/english.json
@@ -90,7 +90,7 @@
 		"id_must_be_integer": "The ID must be an integer.",
 		"url_id_must_be_integer": "The ID in the URL needs to be a valid integer.",
 
-		"register_might_be_machine":"You might be a machine.",
+		"register_might_be_machine":"Our algorithms have detected that you may be a machine. If not, please try to avoid acting so quickly.",
 		"register_need_username":"You didn't put in a username.",
 		"register_need_email":"You didn't put in an email.",
 		"register_first_word_numeric":"The first word of your name must not be purely numeric",
@@ -709,6 +709,7 @@
 		"option_no":"No",
 
 		"panel_menu_head":"Control Panel",
+		"panel_menu_aria":"The control panel menu",
 		"panel_menu_users":"Users",
 		"panel_menu_groups":"Groups",
 		"panel_menu_forums":"Forums",
