Experimenting with Nox's Control Panel. Experimenting with better cache busting for static resources. HTTPSRedirect requests are now counted in the route analytics. More scripts are loaded asynchronously now. Upped the default ReadTimeout to eight seconds. Reduce the number of unneccesary NewAcc calls. Added panel_before_head as an injection point for themes. Themes can now declare scripts to be loaded asynchronously. Tweaked the WS resumption algorithm to mae the backoffs a little less aggressive. Fixed an ordering issue in the WS resumption algorithm where backoffs weren't expiring as fast as they should have. Fixed a bug where template logs weren't being written due to a panic. You can now use byte slices in more places in the transpiled templates. Fixed a bug where Cosora's misc.js seemed to be erroring out. Fixed a bug where YT embeds were getting blocked by the CSP.
Added the panel_back_to_site phrase.
Added the panel_welcome phrase.

--- a/langs/english.json
+++ b/langs/english.json
@@ -708,6 +708,8 @@
 		"option_yes":"Yes",
 		"option_no":"No",
 
+		"panel_back_to_site":"Back to Site",
+		"panel_welcome":"Welcome ",
 		"panel_menu_head":"Control Panel",
 		"panel_menu_aria":"The control panel menu",
 		"panel_menu_users":"Users",
