You can now quote posts with the quote button. Back to Site now links back to the site again. Localised what to do with this topic for a single topic. Improved the margins before and after blockquotes for various scenarios including one on it's own, one with content after and one with content before. Don't bother rendering the opening post source block if it's a guest viewing the page in topic.html Removed some obsolete inline styles from topic.html
Added the topic.quote_button_text phrase.
Added the topic_list.what_to_do_single phrase.
Added the topic.quote_tooltip phrase.
Added the topic.quote_aria phrase.

--- a/langs/english.json
+++ b/langs/english.json
@@ -378,6 +378,7 @@
 		"topic.plus":"+",
 		"topic.plus_one":"+1",
 		"topic.gap_up":" up",
+		"topic.quote_button_text":"Quote",
 		"topic.edit_button_text":"Edit",
 		"topic.delete_button_text":"Delete",
 		"topic.ip_button_text":"IP",
@@ -553,6 +554,7 @@
 		"topic_list.moderate_tooltip":"Moderate",
 		"topic_list.moderate_aria":"Moderate Posts",
 		"topic_list.what_to_do":"What do you want to do with these {0} topics?",
+		"topic_list.what_to_do_single":"What do you want to do with this topic?",
 		"topic_list.moderate_delete":"Delete them",
 		"topic_list.moderate_lock":"Lock them",
 		"topic_list.moderate_move":"Move them",
@@ -599,6 +601,8 @@
 		"topic.unlike_aria":"Unlike this topic",
 		"topic.like_tooltip":"Like",
 		"topic.like_aria":"Like this topic",
+		"topic.quote_tooltip":"Quote Topic",
+		"topic.quote_aria":"Quote this topic",
 		"topic.edit_tooltip":"Edit Topic",
 		"topic.edit_aria":"Edit this topic",
 		"topic.delete_tooltip":"Delete Topic",
