Improved the poll UIs slightly. Polls without any votes should look a little nicer now. .hide_on_edit and other similar classes should now override other classes on Cosora. Added <red> to avoid having to use inline styles for parser errors. Reorganised a few elements in topic.html and topic_alt.html Split topic_poll.html out of topic.html
Fixed a bug where attachments were getting assigned to the wrong reply / topic.

Added the router_after_filters hook.
Added the topic.poll_no_results phrase.

Added two parser tests.

--- a/langs/english.json
+++ b/langs/english.json
@@ -597,6 +597,7 @@
 		"topic.poll_vote":"Vote",
 		"topic.poll_results":"Results",
 		"topic.poll_cancel":"Cancel",
+		"topic.poll_no_results":"No one has voted yet.",
 		"topic.post_controls_aria":"Controls and Author Information",
 		"topic.unlike_tooltip":"Unlike",
 		"topic.unlike_aria":"Unlike this topic",
