Move action posts now show the forum the topic has been moved to. Move modlog events now show the forum the topic has been moved to.
Moved the .action_icon styling from topic.html into the theme stylesheets.

Added the topic.action_topic_move_dest phrase.

--- a/langs/english.json
+++ b/langs/english.json
@@ -656,6 +656,7 @@
 		"topic.action_topic_stick":"This topic was pinned by <a href='%s'>%s</a>",
 		"topic.action_topic_unstick":"This topic was unpinned by <a href='%s'>%s</a>",
 		"topic.action_topic_move":"This topic was moved by <a href='%s'>%s</a>",
+		"topic.action_topic_move_dest":"This topic was moved to <a href='%s'>%s</a> by <a href='%s'>%s</a>",
 		"topic.action_topic_default":"%s has happened",
 
 		"topic.your_information":"Your information",
