Added ten new plugin hooks and split topic_unknown out of the user_unknown phrase. Added the user parameter to the action hooks to give plugins more contextual information.
Added the action_end_edit_topic plugin hook.
Added the action_end_delete_topic plugin hook.
Added the action_end_lock_topic plugin hook.
Added the action_end_unlock_topic plugin hook.
Added the action_end_stick_topic plugin hook.
Added the action_end_unstick_topic plugin hook.
Added the action_end_move_topic plugin hook.
Added the action_end_like_topic plugin hook.

Added the action_end_like_reply plugin hook.

Added the tasks_tick_topic_list plugin hook.

--- a/langs/english.json
+++ b/langs/english.json
@@ -920,6 +920,7 @@
 		"panel_logs_moderation_action_unknown":"Unknown action '%s' on elementType '%s' by <a href='%s'>%s</a>",
 
 		"user_unknown":"Unknown",
+		"topic_unknown":"Unknown",
 
 		"panel_logs_administration_head":"Admin Action Logs",
 
