You can now re-order forums by dragging them in the Forum Manager. Added some visual and textual hints to make it clearer that Menu Items and Forums can be dragged. Added a hint to flush the page after pushing the <head> Added the notice client template and pushNotice client function.
Used a pointer instead of a struct for AnalyticsTimeRange in the analytics routes.
Caught a potential missing error check in InitPhrases.
Use struct{} instead of bool in some of the user mapping maps for WebSockets to save space.
Added the buildUserExprs function to eliminate a bit of duplication.
Fixed a typo in ForumsEdit where it referenced a non-existent notice phrase.
Client hooks can now sort of return things.
Panel phrases are now fetched by init.js, but only in the control panel.
Reduced the number of unused phrases loaded in both the front-end and the control panel.

Plugin hyperdrive should handle Gzip better now.

Added the panel.ForumsOrderSubmit route.

Added the panel_hints_reorder phrase.
Moved the panel_forums phrases into the panel. namespace.
Added the panel.forums_order_updated phrase.
Renamed the panel_themes_menus_item_edit_button_aria phrase to panel_themes_menus_items_edit_button_aria
Renamed the panel_themes_menus_item_delete_button_aria phrase to panel_themes_menus_items_delete_button_aria
Added the panel_themes_menus_items_update_button phrase.

You will need to run the patcher / updater for this commit.

--- a/langs/english.json
+++ b/langs/english.json
@@ -715,6 +715,8 @@
 		"option_yes":"Yes",
 		"option_no":"No",
 
+		"panel_hints_reorder":"Drag to change the order",
+
 		"panel_back_to_site":"Back to Site",
 		"panel_welcome":"Welcome ",
 		"panel_menu_head":"Control Panel",
@@ -769,22 +771,24 @@
 		"panel_user_group":"Group",
 		"panel_user_update_button":"Update User",
 
-		"panel_forums_head":"Forums",
-		"panel_forums_hidden":"Hidden",
-		"panel_forums_edit_button_tooltip":"Edit Forum",
-		"panel_forums_edit_button_aria":"Edit Forum",
-		"panel_forums_update_button":"Update",
-		"panel_forums_delete_button_tooltip":"Delete Forum",
-		"panel_forums_delete_button_aria":"Delete Forum",
-		"panel_forums_full_edit_button":"Full Edit",
-		"panel_forums_create_head":"Add Forum",
-		"panel_forums_create_name_label":"Name",
-		"panel_forums_create_name":"Super Secret Forum",
-		"panel_forums_create_description_label":"Description",
-		"panel_forums_create_description":"Where all the super secret stuff happens",
-		"panel_forums_active_label":"Active",
-		"panel_forums_preset_label":"Preset",
-		"panel_forums_create_button":"Add Forum",
+		"panel.forums_head":"Forums",
+		"panel.forums_hidden":"Hidden",
+		"panel.forums_edit_button_tooltip":"Edit Forum",
+		"panel.forums_edit_button_aria":"Edit Forum",
+		"panel.forums_update_button":"Update",
+		"panel.forums_delete_button_tooltip":"Delete Forum",
+		"panel.forums_delete_button_aria":"Delete Forum",
+		"panel.forums_full_edit_button":"Full Edit",
+		"panel.forums_create_head":"Add Forum",
+		"panel.forums_create_name_label":"Name",
+		"panel.forums_create_name":"Super Secret Forum",
+		"panel.forums_create_description_label":"Description",
+		"panel.forums_create_description":"Where all the super secret stuff happens",
+		"panel.forums_active_label":"Active",
+		"panel.forums_preset_label":"Preset",
+		"panel.forums_create_button":"Add Forum",
+		"panel.forums_update_order_button":"Update Order",
+		"panel.forums_order_updated":"The forums have been successfully updated",
 
 		"panel_forum_head_suffix":" Forum",
 		"panel_forum_name":"Name",
@@ -942,8 +946,9 @@
 		"panel_themes_menus_head":"Menus",
 		"panel_themes_menus_main":"Main Menu",
 		"panel_themes_menus_items_head":"Menu Items",
-		"panel_themes_menus_item_edit_button_aria":"Edit menu item",
-		"panel_themes_menus_item_delete_button_aria":"Delete menu item",
+		"panel_themes_menus_items_edit_button_aria":"Edit menu item",
+		"panel_themes_menus_items_delete_button_aria":"Delete menu item",
+		"panel_themes_menus_items_update_button":"Update Order",
 
 		"panel_themes_menus_edit_head":"Menu Editor",
 		"panel_themes_menus_create_head":"Create Menu Item",
