A notice is now shown when the menu is updated. Re-added the missing padding above notices in the Control Panel for Nox. Moved the inline menu item JS to it's own JS file.
Added the panel.themes_menus_items_order_updated phrase.

--- a/langs/english.json
+++ b/langs/english.json
@@ -949,6 +949,7 @@
 		"panel_themes_menus_items_edit_button_aria":"Edit menu item",
 		"panel_themes_menus_items_delete_button_aria":"Delete menu item",
 		"panel_themes_menus_items_update_button":"Update Order",
+		"panel.themes_menus_items_order_updated":"The menu has been successfully updated",
 
 		"panel_themes_menus_edit_head":"Menu Editor",
 		"panel_themes_menus_create_head":"Create Menu Item",
