--- a/langs/english.json
+++ b/langs/english.json
@@ -751,7 +751,9 @@
 		"panel_menu_debug":"Debug",
 
 		"panel_dashboard_head":"Dashboard",
+		"panel_dashboard_cpu":"CPU: %s",
 		"panel_dashboard_cpu_desc":"The global CPU usage of this server",
+		"panel_dashboard_ram":"RAM: %s",
 		"panel_dashboard_ram_desc":"The global RAM usage of this server",
 		"panel_dashboard_online": "%d%s online",
 		"panel_dashboard_online_desc":"The number of people who are currently online",
