Added Mem to the dashboard and added a historic process memory use analytics pane. Added the memchunks table. Eliminated some unnecessary indentation in the analytics templates.
Added the panel_menu_statistics_memory phrase.
Added the panel_dashboard_memused phrase.
Added the panel_dashboard_memused_desc phrase.
Added the panel_statistics_memory_head phrase.

You will need to run the updater / patcher for this commit.

--- a/langs/english.json
+++ b/langs/english.json
@@ -740,6 +740,7 @@
 		"panel_menu_statistics_systems":"Systems",
 		"panel_menu_statistics_languages":"Languages",
 		"panel_menu_statistics_referrers":"Referrers",
+		"panel_menu_statistics_memory":"Memory",
 		"panel_menu_reports":"Reports",
 		"panel_menu_logs":"Logs",
 		"panel_menu_logs_registrations":"Registrations",
@@ -755,6 +756,8 @@
 		"panel_dashboard_cpu_desc":"The global CPU usage of this server",
 		"panel_dashboard_ram":"RAM: %s",
 		"panel_dashboard_ram_desc":"The global RAM usage of this server",
+		"panel_dashboard_memused":"Mem: %.1f%s",
+		"panel_dashboard_memused_desc":"The amount of memory likely being used by this instance",
 		"panel_dashboard_online": "%d%s online",
 		"panel_dashboard_online_desc":"The number of people who are currently online",
 		"panel_dashboard_guests_online":"%d%s guests online",
@@ -880,6 +883,7 @@
 		"panel_statistics_operating_systems_head":"Operating Systems",
 		"panel_statistics_topic_counts_head":"Topic Counts",
 		"panel_statistics_requests_head":"Requests",
+		"panel_statistics_memory_head":"Memory",
 
 		"panel_statistics_time_range_one_year":"1 year",
 		"panel_statistics_time_range_three_months":"3 months",
