Do proper averaging and collect more samples for the memory analytics pane. Added an ETag for the alerts endpoint when you're not logged to save bandwidth. The Page Manager now uses dyntmpl. The Setting Manager now uses dyntmpl. The Word Filter Manager now uses dyntmpl. Fixed the padding on the noavatar alerts for Nox.
Tweaked the panel_word_filters_to phrase.
Tweaked the panel_statistics_memory_head phrase.
Added the panel_statistics_memory_chart_aria phrase.
Added the panel_statistics_memory_table_aria phrase.
Added the panel_statistics_memory_no_memory phrase.

--- a/langs/english.json
+++ b/langs/english.json
@@ -844,7 +844,7 @@
 		"panel_group_extended_permissions":"Extended Permissions",
 
 		"panel_word_filters_head":"Word Filters",
-		"panel_word_filters_to":"...to...",
+		"panel_word_filters_to":"to",
 		"panel_word_filters_edit_button_aria":"Edit Word Filter",
 		"panel_word_filters_update_button":"Update",
 		"panel_word_filters_delete_button_aria":"Delete Word Filter",
@@ -883,7 +883,7 @@
 		"panel_statistics_operating_systems_head":"Operating Systems",
 		"panel_statistics_topic_counts_head":"Topic Counts",
 		"panel_statistics_requests_head":"Requests",
-		"panel_statistics_memory_head":"Memory",
+		"panel_statistics_memory_head":"Memory Usage",
 
 		"panel_statistics_time_range_one_year":"1 year",
 		"panel_statistics_time_range_three_months":"3 months",
@@ -897,11 +897,13 @@
 		"panel_statistics_post_counts_chart_aria":"Post Chart",
 		"panel_statistics_topic_counts_chart_aria":"Topic Chart",
 		"panel_statistics_requests_chart_aria":"Requests Chart",
+		"panel_statistics_memory_chart_aria":"Memory Use Chart",
 		"panel_statistics_details_head":"Details",
 		"panel_statistics_post_counts_table_aria":"Post Table, this has the same information as the post chart",
 		"panel_statistics_topic_counts_table_aria":"Topic Table, this has the same information as the topic chart",
 		"panel_statistics_route_views_table_aria":"View Table, this has the same information as the view chart",
 		"panel_statistics_requests_table_aria":"View Table, this has the same information as the view chart",
+		"panel_statistics_memory_table_aria":"Memory Use Table, this has the same information as the memory use chart",
 		"panel_statistics_views_suffix":" views",
 		"panel_statistics_posts_suffix":" posts",
 		"panel_statistics_topics_suffix":" topics",
@@ -913,6 +915,7 @@
 		"panel_statistics_referrers_no_referrers":"No referrers could be found in the selected time range",
 		"panel_statistics_routes_no_routes":"No route view counts could be found in the selected time range",
 		"panel_statistics_operating_systems_no_operating_systems":"No operating systems could be found in the selected time range",
+		"panel_statistics_memory_no_memory":"No memory chunks could be found in the selected time range",
 
 		"panel_logs_menu_head":"Logs",
 		"panel_logs_registration_head":"Registrations",
