--- a/langs/english.json
+++ b/langs/english.json
@@ -960,6 +960,7 @@
 
 		"panel_themes_menus_head":"Menus",
 		"panel_themes_menus_main":"Main Menu",
+		"panel_themes_menus_items_suffix":" items",
 		"panel_themes_menus_items_head":"Menu Items",
 		"panel_themes_menus_items_edit_button_aria":"Edit menu item",
 		"panel_themes_menus_items_delete_button_aria":"Delete menu item",
