Added the active memory analytics pane. More to come here. Added the meta store.
Added the panel_menu_statistics_active_memory phrase.
Added the panel_statistics_active_memory_head phrase.

Added the panel_analytics_time_range_month template.

Added Go 1.12 to the Travis list.

Added the stack and heap columns to the memchunks table.
Added the createdAt column to the activity_stream table.
Added the meta table.

You will need to run the patcher / updater for this commit.

--- a/langs/english.json
+++ b/langs/english.json
@@ -741,6 +741,7 @@
 		"panel_menu_statistics_languages":"Languages",
 		"panel_menu_statistics_referrers":"Referrers",
 		"panel_menu_statistics_memory":"Memory",
+		"panel_menu_statistics_active_memory":"Active Memory",
 		"panel_menu_reports":"Reports",
 		"panel_menu_logs":"Logs",
 		"panel_menu_logs_registrations":"Registrations",
@@ -884,6 +885,7 @@
 		"panel_statistics_topic_counts_head":"Topic Counts",
 		"panel_statistics_requests_head":"Requests",
 		"panel_statistics_memory_head":"Memory Usage",
+		"panel_statistics_active_memory_head":"Active Memory",
 
 		"panel_statistics_time_range_one_year":"1 year",
 		"panel_statistics_time_range_three_months":"3 months",
