--- a/langs/english.json
+++ b/langs/english.json
@@ -589,7 +589,7 @@
 		"forums_no_forums":"You don't have access to any forums.",
 
 		"topic.opening_post_aria":"The opening post for this topic",
-		"topic.status_closed_aria":"This topic has been locked",
+		"topic.status_closed_aria":"This topic is locked",
 		"topic.title_input_aria":"Topic Title Input",
 		"topic.update_button":"Update",
 		"topic.userinfo_aria":"The information on the poster",
